--- a/info.yaml
+++ b/info.yaml
@@ -24,12 +24,12 @@ documentation:
   description:  "Can enter a binary number and the clock is divided by 2^(number entered)"      # Short description of what your project does
 
 # Longer description of how the project works. You can use standard markdown format.
-  how_it_works: Enter a binary number using Inputs 2-5 and the clock on output 8 should be divided.
-      Explain how your project works
+  how_it_works: |
+      Enter a binary number using Inputs 2-5 and the clock on output 8 should be divided.
 
 # Instructions on how someone could test your project, include things like what buttons do what and how to set the clock if needed
-  how_to_test:  Enter a binary number and probe output 8 to see the clock frequency get divided.
-      Explain how to test your project
+  how_to_test: |
+      Enter a binary number and probe output 8 to see the clock frequency get divided.
 
 # A description of what the inputs do
   inputs:               
